# Playground

D3DFontRender/: D3DFontRender.sln
D3DFontRender/D3DFontRender/: D3DFontRender.vcxproj  D3DFontRender.vcxproj.filters  main.cpp  ps_quad.h  ps_quad.hlsl  vs_quad.h  vs_quad.hlsl
DWriteTest/: DWriteTest.sln
DWriteTest/DWriteTest/: DWriteTest.vcxproj  main.cpp
Direct2Wic/: Direct2Wic.sln
Direct2Wic/Direct2Wic/: Direct2Wic.vcxproj  main.cpp  output.tif
Display/: Display.sln
Display/Display/: Display.vcxproj  Display.vcxproj.filters
Display/Display/shader/: quad.hlsl  quad_ps.hlsl
Display/Display/src/: display.cpp  display.h  gpu.cpp  gpu.h  gpu_color_buffer.cpp  gpu_color_buffer.h  gpu_deletion_queue.h  gpu_depth_stencil_buffer.cpp  gpu_depth_stencil_buffer.h  gpu_desc_heap.cpp  gpu_desc_heap.h  gpu_fb.h  gpu_pso.cpp  gpu_pso.h  gpu_resource_barrier.cpp  gpu_resource_barrier.h  gpu_ring_buffer.cpp  gpu_ring_buffer.h  gpu_text_drawer.cpp  main.c  (+4 more)
FontAtlasTool/: FontAtlasTool.sln
FontAtlasTool/FontAtlasTool/: FontAtlasTool.vcxproj  main.cpp
HalfFloat/: HalfFloat.sln
HalfFloat/HalfFloat/: HalfFloat.vcxproj  HalfFloat.vcxproj.filters  halffloat.c  hfloat.h
MView/: MView.sln  MView.vcxproj  MView.vcxproj.filters
MView/src/: App.cpp  MView.cpp  main.cpp
Particulator/: Particulator.sln  Particulator.vcxproj  Particulator.vcxproj.filters
Particulator/src/: Particulator.cpp  error.h  window.cpp  window.h
RingAlloc/: RingAlloc.sln  RingAlloc.vcxproj  RingAlloc.vcxproj.filters  main.cpp  ring_buffer.h
glTF/: glTF.sln
glTF/glTF/: glTF.vcxproj  glTF.vcxproj.filters  main.c  tokenizer.c  tokenizer.h
hashmap/: CMakeLists.txt
hashmap/include/hash/: chaining.h  chaininglist.h  fnv1a.h  robinhood.h
hashmap/include/test/: dataset.h
hashmap/src/: main.c
hashmap/src/hash/: chaining.c  chaininglist.c  fnv1a.c  robinhood.c
hashmap/src/pcg/: pcg_basic.c
hashmap/src/test/: dataset.c
hfloat/: ReadMe.txt  hfloat.vcxproj  hfloat.vcxproj.filters
hfloat/src/: hfloat.c
json/: json.sln
json/json/: json.vcxproj  json.vcxproj.filters
json/src/: json.c  json.h  main.c
json/test/: file0.json
libvk/: .clang-format  CMakeLists.txt
libvk/include/: libvk.h
libvk/include/loader/: vk.h  vkloader.h
libvk/include/utils/: vkutils.h  vkwindow.h
libvk/lib/: vklib.lib
libvk/src/: libvk.c
libvk/src/loader/: vk.c  vkloader.c
libvk/src/utils/: vkutils.c  vkwindow.c
vkTest/: .clang-format  CMakeLists.txt
vkTest/include/: vktMemory.h  vktutils.h  vktwindow.h
vkTest/src/: main.c  vktMemory.c  vktutils.c  vktwindow.c  vulkan.c
(+7 files in other folders)
